fix non mobile gallery

--- a/style.css
+++ b/style.css
@@ -2194,7 +2194,7 @@ article:not(.portfolio-post) .full-image {
   /* Ensure old browsers get styled. */ }
   @media only screen and (max-width: 500px) {
     #gallery {
-      padding-right: 0; }
+      padding-right: 1.875vw; }
       #gallery .gallery-title {
         text-align: center; } }
   @media only screen and (max-width: 768px) {
@@ -2266,10 +2266,17 @@ article:not(.portfolio-post) .full-image {
         .touch #gallery .gallery-inner .type-portfolio {
           width: 100%; } }
     #gallery .gallery-inner .gallery-tile {
-      margin-left: 0;
+      margin-left: 1.875vw;
       margin-bottom: 30px;
       background-color: #eee;
-      position: relative; }
+      position: relative;
+      /* Ensure old browsers get styled. */ }
+      @media only screen and (max-width: 768px) {
+        .touch #gallery .gallery-inner .gallery-tile {
+          margin-left: 0; } }
+      @media only screen and (max-device-width: 99999px) {
+        .touch #gallery .gallery-inner .gallery-tile {
+          margin-left: 0; } }
       .js #gallery .gallery-inner .gallery-tile {
         opacity: 0;
         -webkit-transition: opacity 0.3s ease-out;
